2009-02-01  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-keyring.c:
	* gkr/seahorse-gkr-keyring.h: 
	* gkr/seahorse-gkr-source.c: Retrieve default key name and set 
	default keyring flag on keyrings.
	
	* gkr/seahorse-gkr-keyring-commands.c: Add menu item to make keyring
	default. 
	
2009-02-01  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-source.c: Don't show the session keyring.

2009-02-01  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-keyring-commands.c:
	* gkr/seahorse-gkr-keyring-commands.h: Add 'lock' and 'unlock' commands
	to password keyrings.

2009-02-01  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-set-model.c: Don't remove nodes that have 
	children which are still in the set to display.

2009-02-01  Adam Schreiber  <sadam@clemson.edu>

    * daemon/Makefile.am:
    * daemon/seahorse-daemon.c: Register properly with the session manager.
    Fixes bug #569636

    * autogen.sh:
    * libcryptui/cryptui.c:
    * configure.in:
    * reference/libcryptui/libcryptui-overrides.txt: (added)
    * reference/libcryptui/version.xml.in: (added)
    * reference/libcryptui/Makefile.am: (added)
    * reference/libcryptui/libcryptui-docs.sgml: (added)
    * reference/Makefile.am:
    * Makefile.am: Add infrastructure to add gtk-doc for libcryptui.  
    Removes block for bug #353061

    * configure.in:
    * src/seahorse-viewer.c: Make sure hkp and ldap are disable and preferences
    is removed from the menu when pgp is disabled.  Fixes bug #551799
    * libseahorse/seahorse-prefs.glade: Change window name to "Preferences"
    Fixes bug #546492
    
2009-01-31  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * libegg/eggdesktopfile.c: (added)
    * libegg/eggdesktopfile.h: (added)
    * libegg/eggsmclient.c: (added)
    * libegg/eggsmclient.h:  (added)
    * libegg/eggsmclient-private.h: (added)
    * libegg/eggsmclient-xsmp.c: (added)