@@ -6,7 +6,11 @@
 	default keyring flag on keyrings.
 	
 	* gkr/seahorse-gkr-keyring-commands.c: Add menu item to make keyring
-	default. 
+	default.
+	
+	* gkr/seahorse-gkr-source.c:
+	* gkr/seahorse-gkr-source.h: Add concept of a 'default' gkr source, 
+	so we can access it for refresh operations and the like.  
 	
 2009-02-01  Stef Walter  <stef@memberwebs.com>
 
